feat(): images added and content modified

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,9 @@
 // Override Bootstrap's variables
 $primary: #000000;
-$secondary: #88223d;
+$secondary: #8a150d;
 
 // accordion
 $accordion-button-active-bg: #ffC1C3;
 $accordion-button-bg: #ffdedf;
-
 
 @import "bootstrap/scss/bootstrap";
